--- a/PocketRoamingHTML/html/member.html
+++ b/PocketRoamingHTML/html/member.html
@@ -8,14 +8,14 @@
     <script src="../bootstrap5/js/bootstrap.js"></script>
     <script src="../js/jquery.js"></script>
 
-    
+    <meta http-equiv="refresh" content="0; url=./member_profile.html">
     <title>Document</title>
 </head>
 <body>
     <!-- top-navbar navbar navbar-expand-sm navbar-dark bg-dark -->
     <nav class="navbar navbar-expand bg-info text-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../img/LOGO03.png" style="height:30px; width:auto;">
             </a>
             <ul class="nav nav-pills me-auto te mx-1">
@@ -29,6 +29,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./chat.html">聊天室</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="./wishpool.html">許願池</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white active"  href="./member.html">會員</a>
@@ -134,23 +137,6 @@
 
         <!-- 標籤內容 -->
         <div class="col-9 ">
-            <div class="mx-3 my-3 px-3 py-3" id="myTab">
-                <div class="tab-content" id="nav-tabContent">
-                    <!-- 會員資料 -->
-                    <div class="tab-pane fade show active" role="tabpanel" id="tab1" aria-labelledby="nav-member-tab">
-                        <div class="card">
-                            <div class="card-body text-dark text-center">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"class="rounded-circle img-fluid" style="width: 100px;" />
-                                <h4 class="my-2">Julie L. Arsenault</h4>
-                                <p>ewdewdwdwedwedwedwedwedwedwedwedwedwedaadzxc</p>
-                                <button type="button" class="btn btn-primary btn-rounded btn-lg">
-                                    Message now
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
