--- a/PocketRoamingHTML/html/member_uploadproduct.html
+++ b/PocketRoamingHTML/html/member_uploadproduct.html
@@ -15,7 +15,7 @@
     <!-- top-navbar navbar navbar-expand-sm navbar-dark bg-dark -->
     <nav class="navbar navbar-expand bg-info text-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../img/LOGO03.png" style="height:30px; width:auto;">
             </a>
             <ul class="nav nav-pills me-auto te mx-1">
@@ -29,6 +29,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./chat.html">聊天室</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="./wishpool.html">許願池</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white active"  href="./member.html">會員</a>
@@ -162,6 +165,7 @@
                             </div>
 
                             <button class="btn btn-info text-white border-3 border-dark my-3">上架</button>
+                            <button class="btn btn-primary text-white border-3 border-dark my-3 mx-5">發表到願望池</button>
                         </div>
                     </form>
                 </div>
