--- a/PocketRoamingHTML/html/wishpool.html
+++ b/PocketRoamingHTML/html/wishpool.html
@@ -31,10 +31,10 @@
                     <a class="nav-link text-white" href="./chat.html">聊天室</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./wishpool.html">許願池</a>
+                    <a class="nav-link text-white active" href="./wishpool.html">許願池</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white active"  href="./member.html">會員</a>
+                  <a class="nav-link text-white"  href="./member.html">會員</a>
                 </li>                
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./cart.html">購物車</a>
@@ -103,76 +103,8 @@
     </nav>
     <!-- main-body -->
     <div class="row">
-        <!-- 左側導覽列 -->
-        <div class="col-3 ">
-            <div class="mx-3 my-3 px-3 py-3 border border-3 border-dark" style="border-radius: 15px;" >
-                <ul class="nav flex-column nav-pills nav-fill">
-                    <li class="nav-item ">
-                        <a class="nav-link" id="nav-member-tab"   aria-controls="tab1" href="./member_profile.html" aria-selected="true">會員資料</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="./member_traderecord.html" aria-selected="false">交易紀錄</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"   href="./member_wishlist.html" aria-selected="false">許願清單</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active"   href="./member_myproduct.html" aria-selected="false">我的商品</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link"   href="./member_uploadproduct.html" aria-selected="false">上架商品</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link"   href="./member_receiveorder.html" aria-selected="false">已接收訂單</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"   href="./member_myorder.html" aria-selected="false">下訂訂單</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"   href="./member_backstage.html" aria-selected="false">管理者後台</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!-- <div class="text-dark " id="tab2">
-            <h1>(我的商品) 圖 名字 狀態 上架日期 單位價格 (按鈕) 修改 刪除</h1>
-        </div> -->
-        <!-- 我的商品 -->
-        <div class="col-9 ">
-                <div class="mx-3 table-responsive py-3 ">
-                    <!-- 商品 -->
-                    <div class="card rounded-3 mb-4">  
-                        <div class="card-body  ">
-                            <div class="row d-flex justify-content-between align-items-center px-3">
-                                <img class="img-fluid rounded-3" style="height:100px;width:auto;" src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/3.webp">
-                                <div class="col-1">
-                                    <p class="lead fw-normal mb-2">我是商品名字</p>
-                                </div>
-                                <div class="col-1 d-flex">
-                                    商品狀態
-                                </div>
-                                <div class="col-1 d-flex">
-                                    上架日期
-                                </div>
-                                <div class="col-1 d-flex">
-                                    單位價格
-                                </div>
-                                <div class="btn-group col-2">
-                                    <button class=" offset-lg-1 btn bg-info border-3 text-white rounded-5">
-                                        修改
-                                    </button>
-                                    <button class=" offset-lg-1 btn border-3 bg-danger text-white rounded-5">
-                                        刪除
-                                    </button>
-                                </div>
-                            </div>
-                        </div>   
-                    </div>
-                    <!-- 商品結束 -->
-                </div>
-            <!-- </div> -->
-        </div>
     </div>
+
 
     <!-- foot -->
     <a href="javascript:window.scrollTo(0,0)">
