--- a/PocketRoamingHTML/html/chat.html
+++ b/PocketRoamingHTML/html/chat.html
@@ -31,6 +31,9 @@
                     <a class="nav-link text-white active" href="./chat.html">聊天室</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-white" href="./wishpool.html">許願池</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link text-white"  href="./member.html">會員</a>
                 </li>                
                 <li class="nav-item">
