--- a/PocketRoamingHTML/html/member_test.html
+++ b/PocketRoamingHTML/html/member_test.html
@@ -15,7 +15,7 @@
     <!-- top-navbar navbar navbar-expand-sm navbar-dark bg-dark -->
     <nav class="navbar navbar-expand bg-info text-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../img/LOGO03.png" style="height:30px; width:auto;">
             </a>
             <ul class="nav nav-pills me-auto te mx-1">
@@ -31,10 +31,10 @@
                     <a class="nav-link text-white" href="./index.html">聊天室</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white active"  href="./html/member.html">會員</a>
+                  <a class="nav-link text-white active"  href="./member.html">會員</a>
                 </li>                
                 <li class="nav-item">
-                  <a class="nav-link text-white"  href="./html/cart.html">購物車</a>
+                  <a class="nav-link text-white"  href="./cart.html">購物車</a>
                 </li>
             </ul>
             <!-- 靠右 -->
