--- a/PocketRoamingHTML/index.html
+++ b/PocketRoamingHTML/index.html
@@ -20,13 +20,16 @@
                 <!-- nav nav-pills -->
                 <!-- data-bs-toggle="pill" -->
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="./index.html">首頁</a>
+                  <a class="nav-link text-white active" href="./index.html">首頁</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./index.html">租借流程</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./html/chat.html">聊天室</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="./html/wishpool.html">許願池</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white"  href="./html/member.html">會員</a>
