--- a/PocketRoamingHTML/html/member.html
+++ b/PocketRoamingHTML/html/member.html
@@ -8,6 +8,8 @@
     <script src="../bootstrap5/js/bootstrap.js"></script>
     <script src="../js/jquery.js"></script>
 
+
+    <!-- 這行會自動跳轉!!!!!!!!!!!!! -->
     <meta http-equiv="refresh" content="0; url=./member_profile.html">
     <title>Document</title>
 </head>
