--- a/PocketRoamingHTML/html/wishpool.html
+++ b/PocketRoamingHTML/html/wishpool.html
@@ -7,6 +7,7 @@
     <!-- <link href="../css/index.css" rel="stylesheet"> -->
     <script src="../bootstrap5/js/bootstrap.js"></script>
     <script src="../js/jquery.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     
     <title>Document</title>
@@ -102,7 +103,35 @@
         </div>
     </nav>
     <!-- main-body -->
-    <div class="row">
+    <div class="row justify-content-center">
+        <div class="col-8 py-3">
+            <!-- 一篇許願卡 -->
+            <div class="card d-flex mx-2 my-2">
+                <a href="#" class="text-dark" style="text-decoration: none;">
+                    <div class="card-body justify-content-between d-flex pt-4">
+                        <img class="img-fluid rounded-4" style="height:30px;width:auto;" src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/3.webp">
+                        <span>標題</span>
+                        <span>作者</span>
+                        <span>時間</span>
+                        <i class="fa fa-comments" aria-hidden="true" style="height:30px;width:auto;">評論 3</i>
+                    </div>
+                </a>
+            </div>
+            <!--  -->
+            <!-- 一篇許願卡 -->
+            <div class="card d-flex mx-2 my-2">
+                <a href="#" class="text-dark" style="text-decoration: none;">
+                    <div class="card-body justify-content-between d-flex pt-4">
+                        <img class="img-fluid rounded-4" style="height:30px;width:auto;" src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/3.webp">
+                        <span>標題</span>
+                        <span>作者</span>
+                        <span>時間</span>
+                        <i class="fa fa-comments" aria-hidden="true" style="height:30px;width:auto;">評論 4</i>
+                    </div>
+                </a>
+            </div>
+            <!--  -->
+        </div>
     </div>
 
 
