--- a/PocketRoamingHTML/html/member_backstage.html
+++ b/PocketRoamingHTML/html/member_backstage.html
@@ -25,7 +25,7 @@
                   <a class="nav-link text-white" href="../index.html">首頁</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="../index.html">租借流程</a>
+                    <a class="nav-link text-white" href="./rentflow.html">租借流程</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./chat.html">聊天室</a>
@@ -143,6 +143,20 @@
                     <div class="text-dark " id="tab2">
                         <h1>管理者後台</h1>
                     </div>
+                    <form class="my-2">
+                        <label>封禁帳號</label>
+                        <input type="text">
+                        <label>時間</label>
+                        <input type="date">
+                        <button class="btn btn-danger border-3 border-dark mx-3">確定</button>
+                    </form>
+                    <form class="my-2">
+                        <label>封禁商品</label>
+                        <input type="text">
+                        <label>時間</label>
+                        <input type="date">
+                        <button class="btn btn-danger border-3 border-dark mx-3">確定</button>
+                    </form>
                 </div>
             </div>
         </div>
