--- a/PocketRoamingHTML/index.html
+++ b/PocketRoamingHTML/index.html
@@ -23,7 +23,7 @@
                   <a class="nav-link text-white active" href="./index.html">首頁</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="./index.html">租借流程</a>
+                    <a class="nav-link text-white" href="./html/rentflow.html">租借流程</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./html/chat.html">聊天室</a>
@@ -78,13 +78,13 @@
 
                                     <form class="text-dark">
                                         <div class="modal-body ">
-                                            <label class="mx-2 my-1">帳號　　　　:</label>
+                                            <label class="mx-2 my-1">帳號　　　　　:　</label>
                                             <input class="mx-2 my-1" type="text"><br>
-                                            <label class="mx-2 my-1">密碼　　　　:</label>
+                                            <label class="mx-2 my-1">密碼　　　　　:　</label>
                                             <input class="mx-2 my-1" type="text"><br>
-                                            <label class="mx-2 my-1">再次確認密碼:</label>
+                                            <label class="mx-2 my-1">再次確認密碼　:　</label>
                                             <input class="mx-2 my-1" type="text"><br>
-                                            <label class="mx-2 my-1">信箱　　　　:</label>
+                                            <label class="mx-2 my-1">信箱　　　　　:　</label>
                                             <input class="mx-2 my-1" type="text"><br>         
                                         </div>
                                         <div class="modal-footer">
@@ -126,7 +126,7 @@
                                 </div>
                                 <div class="mx-1 my-1">
                                     <label class="mx-1 my-1">日期</label>
-                                    <input value="選擇租借日" id="inputDate1" class="form-control  mx-1 my-1" type="date" >
+                                    <input value="選擇租借日" id="inputDate1" class="form-control " type="date" >
                                 </div>
                                 <input type="submit" class="mx-1 my-1 mt-2" value="搜尋">
                             </form>
