--- a/PocketRoamingHTML/html/member_profile.html
+++ b/PocketRoamingHTML/html/member_profile.html
@@ -30,7 +30,7 @@
                   <a class="nav-link text-white" href="../index.html">首頁</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="../index.html">租借流程</a>
+                    <a class="nav-link text-white" href="./rentflow.html">租借流程</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="./chat.html">聊天室</a>
