--- a/PocketRoamingHTML/html/member_profile.html
+++ b/PocketRoamingHTML/html/member_profile.html
@@ -116,6 +116,9 @@
                         <a class="nav-link active" id="nav-member-tab"   aria-controls="tab1" href="./member_profile.html" >會員資料</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link " href="./member_payment.html" >付款資訊</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link " href="./member_traderecord.html" >交易紀錄</a>
                     </li>
                     <li class="nav-item">
