--- a/PocketRoamingHTML/html/member_uploadproduct.html
+++ b/PocketRoamingHTML/html/member_uploadproduct.html
@@ -112,6 +112,9 @@
                             <a class="nav-link" id="nav-member-tab"   aria-controls="tab1" href="./member_profile.html" aria-selected="true">會員資料</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link " href="./member_payment.html" >付款資訊</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link " href="./member_traderecord.html" aria-selected="false">交易紀錄</a>
                         </li>
                         <li class="nav-item">
@@ -158,6 +161,10 @@
                             <div class="mb-3">
                                 <label for="formFile" class="form-label">上傳圖片</label>
                                 <input class="form-control" type="file" id="formFile">
+                            </div>
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">選擇上架日期</label>
+                                <input class="form-control" type="date" id="productdate">
                             </div>
                             <div class="">
                                 <label for="typeNumber" class="form-label">輸入金額</label>
