--- a/PocketRoamingHTML/html/member_myproduct.html
+++ b/PocketRoamingHTML/html/member_myproduct.html
@@ -111,6 +111,9 @@
                         <a class="nav-link" id="nav-member-tab"   aria-controls="tab1" href="./member_profile.html" aria-selected="true">會員資料</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link " href="./member_payment.html" >付款資訊</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link " href="./member_traderecord.html" aria-selected="false">交易紀錄</a>
                     </li>
                     <li class="nav-item">
