--- a/PocketRoamingHTML/html/member_payment.html
+++ b/PocketRoamingHTML/html/member_payment.html
@@ -141,7 +141,42 @@
         <!-- 標籤內容 -->
         <div class="col-9 ">
             <div class="mx-3 my-3 px-3 py-3 text-dark" id="myTab">
-                <!-- 下訂訂單 -->
+                <div>
+                    <span>姓</span>
+                    <span>名</span>
+                    <span>地址</span>
+                    <span>卡號</span>
+                    <span>有效期限</span>
+                    <button>預定用來新增資料</button>
+                </div>
+                <div class="card rounded-3 my-4">  
+                    <div class="card-body  ">
+                        <div class="row d-flex justify-content-between align-items-center px-3">
+                            <div class="col-1">
+                                <p class="lead fw-normal mb-2">編號</p>
+                            </div>
+                            <div class="col-1 d-flex">
+                                姓名
+                            </div>
+                            <div class="col-1 d-flex">
+                                地址
+                            </div>
+                            <div class="col-1 d-flex">
+                                卡號
+                            </div>
+                            <div class="btn-group col-2">
+                                <button class=" offset-lg-1 btn bg-info border-3 text-white rounded-5">
+                                    修改
+                                </button>
+                                <button class=" offset-lg-1 btn border-3 bg-danger text-white rounded-5">
+                                    刪除
+                                </button>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
+
+
                 
             </div>
         </div>
