--- a/PocketRoamingHTML/html/wishpool.html
+++ b/PocketRoamingHTML/html/wishpool.html
@@ -155,7 +155,7 @@
                  <!--  -->
                  <div class="col-3 mb-3">
                     <div class="card mb-3" style="">
-                        <img src="../img/big3.jpg" class="card-img-top" alt="...">
+                        <img src="../img/rent_process.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
