--- a/PocketRoamingHTML/html/product.html
+++ b/PocketRoamingHTML/html/product.html
@@ -104,6 +104,35 @@
     </nav>
     <!-- main-body -->
     <div class="row justify-content-center">
+        <div class="col-3">
+            <div class="px-3 py-3">
+                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/3.webp" class="card-img-top">
+            </div>
+        </div>
+        <div class="col-9 px-4 py-4">
+            <h1 class="py-4">產品標題</h1>
+            <h2 class="py-4">產品價格</h2>
+            <div class="my-4">
+                <p class="h3">簡介</p>
+                <p class="h4">wqdqwdqwdqwdq</p>
+                <p class="h4">asdasdasdasd</p>
+            </div>
+            <div class="row my-3">
+                <div class="col-4">
+                    <p class="h3">運送方式</p>
+                </div>
+                <div class="col-4">
+                    <p class="h3">歸還方式</p>
+                </div>
+                <div class="col-4">
+                    <p class="h3">付款方式</p>
+                </div>
+            </div>
+            <div class="mt-auto position-absolute  end-0 mx-4  bottom-0   py-4">
+                <button class="my-3 btn btn-info text-white border-3 border-dark">加入購物車</button>
+                <button class="btn btn-secondary text-white border-3 border-dark">聯絡出租者</button>
+            </div>
+        </div>
   
     </div>
 
